--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ lerna-debug.log*
 *.xlsm
 *.xls
 
+# Ignorar toda la carpeta /data/ y su contenido
+/data/
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
